# llm-dev

./: .env  Dockerfile  Dockerfile2  requirements.txt
draft/Military-Generative-Model/: README.md
draft/Military-Generative-Model/datahandling/: dataset_utils.ipynb
draft/Military-Generative-Model/langchain-streamlit/: Home.py
draft/Military-Generative-Model/models/: QLoRA.ipynb  QLoRA_model_train_test.ipynb  bllossom3b.ipynb  library.ipynb  rag_test.ipynb  test.ipynb  train_baseline.ipynb
draft/inference/: 01_basic_understanding_for_inference.ipynb  02_basic_inference_using_hf-LM-Instruct.ipynb  02_basic_inference_using_hf-LM.ipynb  03_inference_hf_dataset-LM-Instruct.ipynb  03_inference_hf_dataset-LM.ipynb  TODO.txt
draft/langchain/: 01_basic_langchain_singleinput.ipynb  01_prompt_template.ipynb  Document.ipynb  TODO.txt  _caching.ipynb  _memory.ipynb  _save_memory_sql.ipynb  sqlite.db  studynote.ipynb  test.md
draft/langchain-streamlit/: Home.py
draft/langgraph-mcp-agents/: .env.example  .gitignore  MCP-HandsOn-ENG.ipynb  MCP-HandsOn-KOR.ipynb  README.md  README_KOR.md  app.py  app_KOR.py  config.json  example_config.json  mcp_server_rag.py  mcp_server_time.py  packages.txt  pyproject.toml  requirements.txt  utils.py
draft/langgraph-mcp-agents/dockers/: docker-compose-KOR-mac.yaml  docker-compose-KOR.yaml  docker-compose-mac.yaml  docker-compose.yaml
draft/llm-finetuning/: README.md
draft/mcp-usecase/: .env.example  .gitignore  LICENSE.md  README.md  README_KR.md  pyproject.toml  requirements.txt  requirements_windows.txt
(+118 files in other folders)
